--- a/login.html
+++ b/login.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <nav>
-        <button id="loginbtn">Kirjaudu</button>
+        <button id="loginBtn">Kirjaudu</button>
     </nav>
+
+    <div id="loginPanel" class="panel">
+        <span id="closeBtn">&times;</span>
+        <h2>Kirjaudu sisään</h2>
+        <form id="formPanel">
+            <label for="username">Käyttäjätunnus:</label>
+            <input type="text" id="username" name="username">
+            <label for="password">Salasana:</label>
+            <input type="text" id="password" name="password">
+            <button type="submit">Kirjaudu sisään</button>
+        </form>
+
+        <h2>Uusi käyttäjä?</h2>
+        <button id="openModal">Rekisteröidy</button>
+    </div>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2>Uusi käyttäjä</h2>
+            <form id="registerModal">
+                <div>
+                    <label for="newUsername">Käyttäjätunnus:</label>
+                    <input type="text" id="newUsername" name="newUsername">
+                </div>
+                <div>
+                    <label for="newPassword">Salasana:</label>
+                    <input type="text" id="newPassword" name="newPassword">
+                </div>
+                <button type="submit" id="registerBtn">Rekisteröidy</button>
+            </form>
+        </div>
+    </div>
     <script src="login.js"></script>
 </body>
 </html>
