rekisteröinti ja kirjautuminen valmiit

--- a/login.html
+++ b/login.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <nav>
-        <button id="loginBtn">Kirjaudu</button>
+        <p id="loggedUser"></p>
+        <button id="logBtn">Kirjaudu</button>
     </nav>
 
     <div id="loginPanel" class="panel">
@@ -19,7 +20,8 @@
             <input type="text" id="username" name="username">
             <label for="password">Salasana:</label>
             <input type="text" id="password" name="password">
-            <button type="submit">Kirjaudu sisään</button>
+            <button type="submit" id="loginBtn">Kirjaudu sisään</button>
+            <p id="inCorrect" style="color: blue;"></p>
         </form>
 
         <h2>Uusi käyttäjä?</h2>
@@ -36,7 +38,7 @@
                 </div>
                 <div>
                     <label for="newPassword">Salasana:</label>
-                    <input type="text" id="newPassword" name="newPassword">
+                    <input type="password" id="newPassword" name="newPassword">
                 </div>
                 <button type="submit" id="registerBtn">Rekisteröidy</button>
             </form>
