Nyt myydä on nappi kuin Kirjauda

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="navbarContainer">
+        <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
         <nav>
-            <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
             <button id="loginBtn">Kirjaudu</button>
-            <a href="myyjanSivu.html">Myydä</a></li>
+            <button onclick="myydaTuote()" id="myydaBtn">Myydä</button>
         </nav>
     </div>
     <div id="loginPanel" class="panel">
