--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
         <nav>
             <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
-            <button id="loginBtn">Kirjaudu</button>
+            <button id="logBtn">Kirjaudu</button>
             <a href="myyjanSivu.html">Myydä</a></li>
         </nav>
     </div>
