--- a/myyjanSivu.html
+++ b/myyjanSivu.html
@@ -7,7 +7,44 @@
     <title>Kauppa</title>
 </head>
 <body>
-    <div id="navbarContainer"></div>
+    <div id="navbarContainer">
+        <nav>
+            <button id="myydaBtn">Myy</button>
+        </nav>
+    </div>
+    <div id="productModal" class="productModal">
+        <div class="productModal-content">
+            <span id="productCloseModal" class="productClose">&times;</span>
+            <h2>Lisää tuote</h2>
+            <form id="detailsModal">
+                <div>
+                    <label for="productName">Tuote:</label>
+                    <input type="text" id="productName" name="productName">
+                </div>
+                <div>
+                    <label for="productDescription">Tuotteen kuvaus:</label>
+                    <textarea id="productDescription" name="productDescription"></textarea>
+                </div>
+                <div>
+                    <label for="productPrice">Tuotteen hinta:</label>
+                    <input type="number" id="productPrice" name="productPrice">
+                </div>
+                <div>
+                    <label for="productPicture">Lisää kuva:</label>
+                    <input type="file" id="productPicture" name="productPicture" accept="image/*">
+                    <div id="previewPicture"></div>
+                </div>
+                <p id="inValidDetails" style="color: blue;"></p>
+                <button type="submit" id="publishBtn">Julkaise</button>
+            </form>
+        </div>
+    </div>
+    <div id="confirmationModal">
+        <div class="productModal-content">
+            <p>Ilmoituksesi on nyt julkaistu</p>
+            <button id="confirmOkBtn">Ok</button>
+        </div>
+    </div>
 </body>
-<script src="index.js"></script>
+<script src="myyjanSivu.js"></script>
 </html>
