--- a/imoitus.html
+++ b/imoitus.html
@@ -16,9 +16,12 @@
             <button onclick="myydaTuote()" id="myydaBtn">Myy</button>
         </nav>
     </div>
+    <h1 id="tuoteNimi"></h1>
     <div id="slideshowContainer"></div>
+
     <div id="tuoteInfo"></div>
-    <div id="imgChamngeContainer" >
+    
+    <div id="imgChangeContainer" >
         <button onclick="previousImg()">previous</button>
         <button onclick="nextImg()">next</button>
     </div>
