--- a/myyjanSivu.html
+++ b/myyjanSivu.html
@@ -22,6 +22,10 @@
                     <input type="text" id="productName" name="productName">
                 </div>
                 <div>
+                    <label for="productdetail">Lyhyt kuvaus tuotteesta:</label>
+                    <input type="text" id="productDetail" name="productdetail">
+                </div>
+                <div>
                     <label for="productDescription">Tuotteen kuvaus:</label>
                     <textarea id="productDescription" name="productDescription"></textarea>
                 </div>
@@ -45,6 +49,7 @@
             <button id="confirmOkBtn">Ok</button>
         </div>
     </div>
+    <div id="kauppaContainer"></div>
 </body>
 <script src="myyjanSivu.js"></script>
 </html>
