--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p id="loggedUser"></p>
             <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
             <button id="logBtn">Kirjaudu</button>
-            <button onclick="myydaTuote()" id="myydaBtn">Myy</button>
+            <button id="myydaBtn">Myy</button>
         </nav>
     </div>
     <div id="loginPanel" class="panel">
@@ -48,6 +48,43 @@
                 <p id="inValidRegister" style="color: blue;"></p>
                 <button type="submit" id="registerBtn">Rekisteröidy</button>
             </form>
+        </div>
+    </div>
+    <div id="productModal" class="productModal">
+        <div class="productModal-content">
+            <span id="productCloseModal" class="productClose">&times;</span>
+            <h2>Lisää tuote</h2>
+            <form id="detailsModal">
+                <div>
+                    <label for="productName">Tuote:</label>
+                    <input type="text" id="productName" name="productName">
+                </div>
+                <div>
+                    <label for="productdetail">Lyhyt kuvaus tuotteesta:</label>
+                    <input type="text" id="productDetail" name="productdetail">
+                </div>
+                <div>
+                    <label for="productDescription">Tuotteen kuvaus:</label>
+                    <textarea id="productDescription" name="productDescription"></textarea>
+                </div>
+                <div>
+                    <label for="productPrice">Tuotteen hinta:</label>
+                    <input type="number" id="productPrice" name="productPrice">
+                </div>
+                <div>
+                    <label for="productPicture">Lisää kuva:</label>
+                    <input type="file" id="productPicture" name="productPicture" accept="image/*">
+                    <div id="previewPicture"></div>
+                </div>
+                <p id="inValidDetails" style="color: blue;"></p>
+                <button type="submit" id="publishBtn">Julkaise</button>
+            </form>
+        </div>
+    </div>
+    <div id="confirmationModal">
+        <div class="productModal-content">
+            <p>Ilmoituksesi on nyt julkaistu</p>
+            <button id="confirmOkBtn">Ok</button>
         </div>
     </div>
     <div id="kauppaContainer"></div>
