Myyntitoiminto aktiivinen kun kirjauduttu sisään

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <p id="loggedUser"></p>
             <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
+            <div id="sell"></div>
             <button id="logBtn">Kirjaudu</button>
-            <button id="myydaBtn">Myy</button>
         </nav>
     </div>
     <div id="loginPanel" class="panel">
