Luotu toiminto jossa käyttäjä voi tarkastella omia ilmoituksia ja poistaa niitä

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p id="loggedUser"></p>
             <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
             <div id="sell"></div>
+            <div id="publishedItems"></div>
             <button id="logBtn">Kirjaudu</button>
         </nav>
     </div>
@@ -31,6 +32,11 @@
 
         <h2>Uusi käyttäjä?</h2>
         <button id="openModal">Rekisteröidy</button>
+    </div>
+    <div id="publishedPanel" class="panel">
+        <span id="closeBtnPublish">&times;</span>
+        <h2>Omat ilmoitukset</h2>
+        <form id="publishedForm"></form>
     </div>
     <div id="modal" class="modal">
         <div class="modal-content">
