--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div id="navbarContainer">
-        <a id="tunnus" href="index.html"><img src="kuvat/duck.png"></a>
+        <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
         <nav>
             <p id="loggedUser"></p>
+            <div id="sell"></div>
+            <div id="publishedItems"></div>
             <button id="logBtn">Kirjaudu</button>
-            <div id="publishedItems"><button id="publishedBtn">Omat ilmoitukset</button></div>
             <div class="container">
                 <img onclick="console.log('jkdfhg')" src="kuvat/shoppingCart.png" id="ostosKoriImg">
                 <div class="centered">0</div>
@@ -96,9 +97,6 @@
         </div>
     </div>
     <div id="kauppaContainer"></div>
-</body>
-<script src="index.js"></script>
-</html>
 </body>
 <script src="index.js"></script>
 </html>
