käyttäjältä varmistetaan haluaako poistaa tuotteen

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <h2>Omat ilmoitukset</h2>
         <form id="publishedForm"></form>
     </div>
+    <div id="modalOverlay"></div>
+    <div id="confirmDeleteModal">
+        <p class="confirmDeleteText"></p>
+        <button class="yesDelete">Poista</button>
+        <button class="noDelete">Peruuta</button>
+    </div>
     <div id="modal" class="modal">
         <div class="modal-content">
             <span id="closeModal" class="close">&times;</span>
