--- a/imoitus.html
+++ b/imoitus.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="ilmoitus.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="kuvat/duck.png">    
-    <title>Ilmoitus</title>
+    <title id="titleIlmoitus"></title>
 </head>
 <body>
     <div id="navbarContainer">
-        <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
+        <a id="tunnus" href="index.html"><img src="kuvat/duck.png"></a>
         <nav>
             <p id="loggedUser"></p>
             <div id="sell"></div>
@@ -42,6 +42,6 @@
             Add to cart
         </button>
     </div>
-<script src="ilmoitus.js"   ></script>
+<script src="ilmoitus.js"></script>
 </html> 
 
