luotu yläpalkkii toggleri

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <body>
     <div id="navbarContainer">
         <a id="tunnus" href="#"><img src="kuvat/duck.png"></a>
-        <nav>
+        <div id="rightElements">
             <p id="loggedUser"></p>
-            <div id="sell"></div>
-            <div id="publishedItems"></div>
-            <button id="logBtn">Kirjaudu</button>
+            <nav>
+                <button id="menuToggler">☰</button>
+                <div id="menuItems">
+                    <div id="sell"></div>
+                    <div id="publishedItems"></div>
+                    <button id="logBtn">Kirjaudu</button>
+                </div>
+            </nav>
             <div class="container">
                 <img onclick="openChart()" src="kuvat/shoppingCart.png" id="ostosKoriImg">
                 <div class="centered">0</div>
             </div>
-        </nav>
+        </div>
     </div>
     <div id="loginPanel" class="panel">
         <span id="closeBtn">&times;</span>
