eriytetty toimintoja eri .js tiedostoihin

--- a/index.html
+++ b/index.html
@@ -114,4 +114,6 @@
     <div id="kauppaContainer"></div>
 </body>
 <script src="index.js"></script>
+<script src="login.js"></script>
+<script src="myyjanSivu.js"></script>
 </html>
