checkout painike ostoskoriin ja uusi checkOut.js tiedosto

--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@
 <script src="index.js"></script>
 <script src="login.js"></script>
 <script src="myyjanSivu.js"></script>
+<script src="checkOut.js"></script>
 </html>
 
