muutettu checkOut id

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="checkOutModalContent">
             <span id="checkOutCloseBtn" class="productClose">&times;</span>
             <h2>Viimeistele tilaus</h2>
-            <form id="detailsModal">
+            <form id="checkOutDetailsModal">
                 <div>
                     <label for="name">Nimi:</label>
                     <input type="text" id="name" name="name">
