--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <label for="cardHolder">Kortin haltija:</label>
                     <input type="text" id="cardHolder" name="cardholder" placeholder="Ossi Ostaja" required>
                     <label for="cardNumber">Kortin nro.</label>
-                    <input type="number" id="cardNumber" name="cardNumber" placeholder="1234 5678 9012 3456" pattern="[0-9]{16}" required>
+                    <input type="text" id="cardNumber" name="cardNumber" placeholder="1234 5678 9012 3456" pattern="(?:\d{4} ){3}\d{4}" required>
                     <label for="expDate">Kortin voimassaoloaika:</label>
                     <input type="text" id="expDate" name="expDate" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" required>
                     <label for="securityCode">CVV/CVC:</label>
